# recipe-affinity

./: .gitignore  CLAUDE.md  README.md  preferences.json  pyproject.toml
adapters/: astro_renderer.py  file_repository.py  jsonld_source.py
ai-usage/: phase-0.json  phase-1.json  phase-2.json  phase-3.json
app/: astro.config.mjs  package-lock.json  package.json  pnpm-workspace.yaml
app/src/: content.config.ts
app/src/content/recipes/: pasta-al-pesto.json
app/src/pages/: index.astro
app/src/pages/recipes/: [slug].astro
app/src/styles/: global.css
core/domain/: affinity.py  recipe.py  taste_profile.py
core/ports/: page_renderer.py  recipe_repository.py  recipe_source.py
docs/: ARCHITECTURE.md
recipes/: pasta-al-pesto.json
skills/recipe-classifier/: SKILL.md  classify_recipe.py
skills/recipe-fetcher/: SKILL.md  fetch_recipe.py
skills/recipe-page-builder/: SKILL.md  build_page.py
tests/: conftest.py  test_affinity.py  test_file_repository.py  test_jsonld_source.py  test_recipe.py  test_taste_profile.py
tests/fixtures/: pasta.html
